--- a/index.html
+++ b/index.html
@@ -1114,7 +1114,7 @@
                         <div class="col-lg-3 col-md-6">
                             <div class="footer-widget">
                                 <div class="footer-content-right d-flex">
-                                    <h3 class="title">Phone Number: 123 - 456789</h3>
+                                    <h3 class="title">Phone Number: 613-663-6320</h3>
                                 </div>
                                 <div class="footer-social-link">
                                     <ul>
