--- a/ContactUs.html
+++ b/ContactUs.html
@@ -153,6 +153,7 @@
                                         <form action="https://formsubmit.co/socialreachmarketing11@gmail.com" method="POST">
                                             <input type="hidden" name="_captcha" value="false">
                                             <input type="hidden" name="_subject" value="New Message from your customer!">
+                                            <input type="hidden" name="_next" value="https://socialreach.github.io/Website/ContactUs.html">
                                             <input type="text" name="name" placeholder="Business Name *"required>
                                             <input type="text" name="name" placeholder="Your Name"required>
                                             <input type="phone number" name="number" placeholder="Phone Number *"required>
@@ -172,7 +173,7 @@
                                             <div class="contact-phone">
                                               <i class="ion-ios-telephone-outline"></i>
                                               <h4>Phone Number</h4>
-                                              <p><a href="tel:+155895548855">+1 2345 67890 12</a></p>
+                                              <p><a href="tel:+16136636320">613-663-6320</a></p>
                                             </div> 
                                             <div class="contact-email">
                                               <i class="ion-ios-email-outline"></i>
@@ -246,7 +247,7 @@
                         <div class="col-lg-3 col-md-6">
                             <div class="footer-widget">
                                 <div class="footer-content-right d-flex">
-                                    <h3 class="title">Phone Number: 123 - 456789</h3>
+                                    <h3 class="title">Phone Number: 613-663-6320</h3>
                                 </div>
                                 <div class="footer-social-link">
                                     <ul>
