--- a/service-details.html
+++ b/service-details.html
@@ -157,7 +157,7 @@
                                 </div>
                                 <div class="content-part">
                                     <h5 class="title">call us</h5>
-                                    <span>xxxxxxx</span>
+                                    <span>613-663-6320</span>
                                 </div>
                             </div>
                         </div>
@@ -474,7 +474,7 @@
                         <div class="col-lg-3 col-md-6">
                             <div class="footer-widget">
                                 <div class="footer-content-right d-flex">
-                                    <h3 class="title">Phone Number: 123 - 456789</h3>
+                                    <h3 class="title">Phone Number: 613-663-6320</h3>
                                 </div>
                                 <div class="footer-social-link">
                                     <ul>
