--- a/ContactUs.html
+++ b/ContactUs.html
@@ -153,7 +153,7 @@
                                         <form action="https://formsubmit.co/socialreachmarketing11@gmail.com" method="POST">
                                             <input type="hidden" name="_captcha" value="false">
                                             <input type="hidden" name="_subject" value="New Message from your customer!">
-                                            <input type="hidden" name="_next" value="https://socialreach.github.io/Website/ContactUs.html">
+                                            <input type="hidden" name="_next" value="https://socialreach.github.io/ContactUs.html">
                                             <input type="text" name="name" placeholder="Business Name *"required>
                                             <input type="text" name="name" placeholder="Your Name"required>
                                             <input type="phone number" name="number" placeholder="Phone Number *"required>
