--- a/ContactUs.html
+++ b/ContactUs.html
@@ -188,10 +188,10 @@
                                             <h4 class="title">Follow us</h4>
                                         </div>
                                         <ul>
-                                            <li><a href="#"><span class="facebook-icon"><i class="fa fa-facebook-square"></i></span></a></li>
-                                            <li><a href="#"><span class="twitter-icon"><i class="fa fa-twitter-square"></i></span></a></li>
-                                            <li><a href="#"><span class="google-plus-icon"><i class="fa fa-google-plus-square"></i></span></a></li>
-                                            <li><a href="#"><span class="instagram-icon"><i class="fa fa-instagram"></i></span></a></li>
+                                            <li class="facebook-icon"><a href="https://www.facebook.com/profile.php?id=100095179278047"><i class="fa fa-facebook-square"></i></a></li>
+                                            <li class="twitter-icon"><a href="https://twitter.com/SocialReachTeam"><i class="fa fa-twitter-square"></i></a></li>
+                                            <li class="instagram-icon"><a href="https://www.instagram.com/socialreachmarketingagency11/"><i class="fa fa-instagram"></i></a></li>
+                                            <li class="youtube-icon"><a href="https://www.youtube.com/channel/UCAkUOMmVIe25UcPxApzuR0w"><i class="fa fa-youtube"></i></a></li>
                                         </ul>
                                     </div>
                                 </aside>
@@ -251,10 +251,10 @@
                                 </div>
                                 <div class="footer-social-link">
                                     <ul>
-                                        <li class="facebook-icon"><a href="$"><i class="fa fa-facebook-square"></i></a></li>
-                                        <li class="twitter-icon"><a href="$"><i class="fa fa-twitter-square"></i></a></li>
-                                        <li class="linkedin-icon"><a href="$"><i class="fa fa-linkedin-square"></i></a></li>
-                                        <li class="instagram-icon"><a href="$"><i class="fa fa-instagram"></i></a></li>
+                                        <li class="facebook-icon"><a href="https://www.facebook.com/profile.php?id=100095179278047"><i class="fa fa-facebook-square"></i></a></li>
+                                        <li class="twitter-icon"><a href="https://twitter.com/SocialReachTeam"><i class="fa fa-twitter-square"></i></a></li>
+                                        <li class="instagram-icon"><a href="https://www.instagram.com/socialreachmarketingagency11/"><i class="fa fa-instagram"></i></a></li>
+                                        <li class="youtube-icon"><a href="https://www.youtube.com/channel/UCAkUOMmVIe25UcPxApzuR0w"><i class="fa fa-youtube"></i></a></li>
                                     </ul>
                                 </div>
                             </div>
