--- a/service-details.html
+++ b/service-details.html
@@ -478,10 +478,10 @@
                                 </div>
                                 <div class="footer-social-link">
                                     <ul>
-                                        <li class="facebook-icon"><a href="$"><i class="fa fa-facebook-square"></i></a></li>
-                                        <li class="twitter-icon"><a href="$"><i class="fa fa-twitter-square"></i></a></li>
-                                        <li class="linkedin-icon"><a href="$"><i class="fa fa-linkedin-square"></i></a></li>
-                                        <li class="instagram-icon"><a href="$"><i class="fa fa-instagram"></i></a></li>
+                                        <li class="facebook-icon"><a href="https://www.facebook.com/profile.php?id=100095179278047"><i class="fa fa-facebook-square"></i></a></li>
+                                        <li class="twitter-icon"><a href="https://twitter.com/SocialReachTeam"><i class="fa fa-twitter-square"></i></a></li>
+                                        <li class="instagram-icon"><a href="https://www.instagram.com/socialreachmarketingagency11/"><i class="fa fa-instagram"></i></a></li>
+                                        <li class="youtube-icon"><a href="https://www.youtube.com/channel/UCAkUOMmVIe25UcPxApzuR0w"><i class="fa fa-youtube"></i></a></li>
                                     </ul>
                                 </div>
                             </div>
