--- a/service-details.html
+++ b/service-details.html
@@ -243,11 +243,11 @@
 
                                 <div class="card">
                                     <div class="card-header" id="headingTwo">
-                                        <a href="#" role="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">2. Incomplete/severely outdated</a>
+                                        <a href="#" role="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">2. Incomplete/outdated</a>
                                     </div>
                                     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                                         <div class="card-body">
-                                            If you have a website howeever it is either incomplete, severely outdated, or needs massive work, we would help you redo the website entirely. All you need to do is inform us on what you want on the website and a basic look of the website when its done.
+                                            If you have a website however it is either incomplete, severely outdated, or needs massive work, we would help you redo the website entirely. All you need to do is inform us on what you want on the website and a basic look of the website when its done.
                                         </div>
                                     </div>
                                 </div>
